cambio en series

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -31,7 +31,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="juegos_hambre"><h3>The Hunger Games</h3></a>
-                        <p>Calificacion: 7.2/10 | "2h22" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 7.2/10 | "2h22" | 2012 | Thriller-Aventura-Acción | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/THRILLER/PELICULA/hunger games.jpg" alt="Hunger games">
                             <iframe class="trailer" src="https://www.youtube.com/embed/PbA63a7H0bo?si=2ceZZEPzD4iljlGH&amp;controls=0&amp;start=5" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
@@ -55,7 +55,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="inter"><h3>Interestellar</h3></a>
-                        <p>Calificacion: 8.7/10 | "2h49" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 8.7/10 | "2h49" | 2014 | Ciencia Ficción | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/THRILLER/PELICULA/interestellar.jpg" alt="interstellar">
                             <iframe class="trailer" src="https://www.youtube.com/embed/LYS2O1nl9iM?si=roDuOOBQdNt55-5-&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
@@ -67,7 +67,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="rayo"><h3>Cars</h3></a>
-                        <p>Calificacion: 7.2/10 | "1h57" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 7.2/10 | "1h57" | 2006 | Animación-Comedia | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/cars.jpg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/SbXIj2T-_uk?si=myjfY35WHYOTkCBU" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -81,7 +81,7 @@
                     <div class="dtl_pelicula">
                         <a name="riley"></a>
                         <h3>Inside Out</h3>
-                        <p>Calificacion: 8.1/10 | "1h35" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 8.1/10 | "1h35" | 2015 | Animación | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/R (4).jpeg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/yRUAzGQ3nSY?si=dCdxQL3rowV7Z-L_" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -107,7 +107,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="mike"><h3>Monsters Inc.</h3></a>
-                        <p>Calificacion: 8.1/10 | "1h32" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 8.1/10 | "1h32" | 2001 | Animación-Comedia | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/R (6).jpeg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/CGbgaHoapFM?si=VEJj9xPs-7RDnaz0&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -119,7 +119,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="charlie"><h3>Set it Up</h3></a>
-                        <p>Calificacion: 5.1/10 | "1h45" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 5.1/10 | "1h45" | 2018 | Comedia Romántica | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/ROMANCE/PELICULAS/set it up.jpg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/eM6l2-DeZ4c?si=GBZwFcDHejAjG_kM" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -131,7 +131,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="selena"><h3>Monte Carlo</h3></a>
-                        <p>Calificacion: 5.8/10 | "1h49" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 5.8/10 | "1h49" | 2011 | Comedia Romántica | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/OIP (22).jpeg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/X0n3Q_VDQk8?si=YmIHkbY_3ERtYmtU" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
@@ -143,7 +143,7 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="12años"><h3>12 Years a Slave</h3></a>
-                        <p>Calificacion: 8.1/10 | "2h14" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 8.1/10 | "2h14" | 2013 | Drama Históric | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/THRILLER/PELICULA/12 años escl.jpg" alt="12 años">
                             <iframe class="trailer" src="https://www.youtube.com/embed/z02Ie8wKKRg?si=G09StH_W7Qcwu8Bz&amp;controls=0&amp;start=1" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
