--- a/detail-serie.html
+++ b/detail-serie.html
@@ -31,11 +31,11 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="blair"><h3>Gossip Girl</h3></a>
-                        <p>Calificacion: 7.2/10 | "2h22" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 7.5/10 | 2007 | Romance-Drama | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/ROMANCE/SERIES/91I8ElmqRZL._AC_SL1500_.jpg">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/PbA63a7H0bo?si=2ceZZEPzD4iljlGH&amp;controls=0&amp;start=5" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
-                            <p class="sinopsis">Lo que en el pasado fueron los Estados Unidos, ahora es una nación llamada Panem; un imponente Capitolio ejerce un control riguroso sobre los 12 distritos que lo rodean y que están aislados entre sí. Cada distrito se ve obligado a enviar anualmente un chico y una chica entre los doce y los dieciocho años para que participen en los Hunger Games, unos juegos que son transmitidos en directo por la televisión. Se trata de una lucha a muerte, en la que sólo puede haber un superviviente. Katniss Everdeen, una joven de dieciséis años, decide sustituir a su hermana en los juegos; pero para ella, que ya ha visto la muerte de cerca, la lucha por la supervivencia es su segunda naturaleza.</p>
+                            <iframe class="https://www.youtube.com/embed/eCg1RN-dyQk?si=RPc8lyQ1MDIUSDY1" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
+                            <p class="sinopsis">Narra las extravagantes vidas de un grupo de chicos de la alta sociedad de Nueva York que asisten al mismo instituto en el Upper East Side y su vida gira en torno a las clases, las fiestas más salvajes, la ropa y el sexo. Están inmersos en un círculo vicioso de rumores, mentiras y secretos alimentado por el blog más popular del colegio: Gossip Girl.</p>
                         </div>
                     </div>
                 </article>
@@ -43,11 +43,11 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="phil"><h3>Modern Family</h3></a>
-                        <p>Calificacion: 7.5/10 | "2h47" | 2016 | Romance-Sátira | <!--logo del corazon--> </p>
+                        <p>Calificacion: 8.5/10 | 2009 | Comedia | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/FAMILIA/SERIES/R (5).jpeg" alt="LalaLand">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/0pdqf4P9MB8?si=SyHSGSk_HMHieuUa&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
-                            <p class="sinopsis">Mia y Sebastian son dos jóvenes que quieren abrirse camino en el mundo de Hollywood. Mia es una joven aspirante a actriz que trabaja como camarera mientras acude a castings y Sebastian toca el piano en bares. Un día sus caminos se cruzan e inmediatamente se enamoran. Los dos trabajan juntos para hacer realidad sus sueños, pero pronto se dan cuenta de que el mundo del arte pide sacrificios que ponen en peligro su relación.</p>
+                            <iframe class="trailer" src="https://www.youtube.com/embed/Ub_lfN2VMIo?si=BvuKYfXg1hfQ_58I" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
+                            <p class="sinopsis">La serie narra la vida de Jay Pritchett y su familia, todos vecinos del mismo barrio a las afueras de Los Ángeles, y gira en torno a tres tipos de familia: nuclear, extendida y con padres del mismo sexo y está basada en situaciones cómicas que podrían ocurrirle a cualquiera en la vida real.</p>
                         </div>
                     </div>
                 </article>
@@ -55,11 +55,11 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="out"><h3>Outlander</h3></a>
-                        <p>Calificacion: 8.7/10 | "2h49" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 8.4/10 | 2014 | Drama-Histórico | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/ROMANCE/SERIES/outlander.jpg" alt="interstellar">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/LYS2O1nl9iM?si=roDuOOBQdNt55-5-&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
-                            <p class="sinopsis">Inspirada en la teoría del experto en relatividad Kip Stepehen Thorne sobre la existencia de los agujeros de gusano, y su función como canal para llevar a cabo los viajes en el tiempo. La historia gira en torno a un grupo de intrépidos exploradores que se adentran por uno de esos agujeros y viajan a través del mismo, encontrándose en otra dimensión. Un mundo desconocido se abre ante ellos y deberán luchar por mantenerse unidos si quieren volver de una pieza.</p>
+                            <iframe class="trailer" src="https://www.youtube.com/embed/PFFKjptRr7Y?si=rJrN6f2-DBRh7gZZ" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
+                            <p class="sinopsis">Durante la Segunda Guerra Mundial, Claire, una enfermera casada, vive una experiencia sorprendente. Durante un viaje a Escocia, la joven visita un misterioso círculo de piedras antiguas. Afectada por un misterioso poder, Claire entra en trance para despertar lejos de su marido, su época y la vida que ha conocido hasta ahora.</p>
                         </div>
                     </div>
                 </article>
@@ -67,12 +67,11 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="lisa"><h3>The Simpsons</h3></a>
-                        <p>Calificacion: 7.2/10 | "1h57" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 8.7/10 | 1989 | Comedia | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/FAMILIA/SERIES/R (7).jpeg">
-                            <iframe class="trailer" src="https://www.youtube.com/embed/SbXIj2T-_uk?si=myjfY35WHYOTkCBU" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
-                            <p class="sinopsis"> Un pequeño y nuevo coche de carreras, llamado Rayo McQueen, se está preparando para ser un experto corredor y convertirse en uno de los automóviles más respetados en el panorama internacional. Un día toma la decisión de cambiar por completo su vida y se dirige a Radiator Springs, un pequeño y desértico pueblo donde hace nuevos amigos y comprenderá el verdadero sentido de su existencia. Allí entablará una buena relación con el Porsche Sally, Doc Hudson y Mater, una vieja camioneta que le hará comprender que hay cosas más importantes que los trofeos y la fama, algo que sin duda había sido el propósito del protagonista desde que se comprometió a participar en el mundo de las carreras. ¿Podrá Rayo McQueen dejar de lado todas estas cosas y centrarse en lo que de verdad merece la pena?
-                            </p>
+                            <iframe class="trailer" src="https://www.youtube.com/embed/pzdnq1zFvOY?si=x-zUYMJYijh8nN_o" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
+                            <p class="sinopsis">La serie es una sátira hacia la sociedad estadounidense que narra la vida y el día a día de una familia de clase media de ese país (cuyos miembros son Homer, Marge, Bart, Lisa y Maggie Simpson) que vive en un pueblo ficticio llamado Springfield.</p>
                         </div>
                     </div>
                 </article>
@@ -81,11 +80,11 @@
                     <div class="dtl_pelicula">
                         <a name="mirror"></a>
                         <h3>Black Mirror</h3>
-                        <p>Calificacion: 8.1/10 | "1h35" | estreno | genero | <!--logo del corazon--> </p>
+                        <p>Calificacion: 8.7/10 | 2011 | Thriller/Ciencia-ficción | <!--logo del corazon--> </p>
                         <div class="info"> <!--Agregar nbr a la clase-->
                             <img class="fotos" src="./img/THRILLER/SERIE/black mirror.jpg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/yRUAzGQ3nSY?si=dCdxQL3rowV7Z-L_" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
-                            <p class="sinopsis">Intensamente cuenta la historia de Riley, una niña que se muda del Medio Oeste porque su padre ha conseguido trabajo en San Francisco. Riley tiene las emociones comunes que todos conocemos, pero estas emociones viven en un centro de contro dentro de la mente de Riley desde donde la ayudan a tomar decisiones en su vida. A continuación les presentamos el resumen de la historia de Intensamente.</p>
+                            <p class="sinopsis">La ficción distribuida por Netflix hace un análisis de las nuevas tecnologías de una forma avanzada y futurista que en ocasiones amenazan la integridad de las personas. Un camino por lo peligroso, las obsesiones, la moral, la soledad y los sentimientos envueltos en diferentes mundos controlados por lo tecnológico con un final, en su mayoría, catastrófico, aunque otras veces satisfactorio.                            </p>
                         </div>
                     </div>
                 </article>
