--- a/genre.html
+++ b/genre.html
@@ -16,10 +16,14 @@
                 <a href="./index.html" CLASS="cinepedia"><h1>CINEPEDIA</h1></a>
                 <a class="navegador" href="./favorite.html">Favoritos</a>
                 <a class="navegador" href="./genre.html">Generos</a>
-                <a class="navegador" href="./search-result.html">Resultado de busqueda</a>
                 <a class="navegador" href="./detail-genre.html">Detalles de genero</a>
                 <a class="navegador" href="./detail-movie.html">Detalles pelicula</a>
                 <a class="navegador" href="./detail-serie.html">Detalles serie</a>
+                <form action="search-result.html" method="GET">
+                    <div class="buscador">
+                        <i class="fa-solid fa-magnifying-glass lupa"></i><input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
+                    </div>
+                </form>
             </nav>
         </header>
 
