--- a/detail-movie.html
+++ b/detail-movie.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="./img/LOGO/PngItem_5147565.png">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
     </head>
 
@@ -35,20 +36,19 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="juegos_hambre"><h3>The Hunger Games</h3></a>
-                        <p>Calificacion: 7.2/10 | "2h22" | 2012 | Thriller-Aventura-Acción | <!--logo del corazon--> </p>
-                        <div class="info"> <!--Agregar nbr a la clase-->
+                        <p>Calificacion: 7.2/10 | "2h22" | 2012 | Thriller-Aventura-Acción |  </p>
+                        <div class="info"> 
                             <img class="fotos" src="./img/THRILLER/PELICULA/hunger games.jpg" alt="Hunger games">
                             <iframe class="trailer" src="https://www.youtube.com/embed/PbA63a7H0bo?si=2ceZZEPzD4iljlGH&amp;controls=0&amp;start=5" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
                             <p class="sinopsis">Lo que en el pasado fueron los Estados Unidos, ahora es una nación llamada Panem; un imponente Capitolio ejerce un control riguroso sobre los 12 distritos que lo rodean y que están aislados entre sí. Cada distrito se ve obligado a enviar anualmente un chico y una chica entre los doce y los dieciocho años para que participen en los Hunger Games, unos juegos que son transmitidos en directo por la televisión. Se trata de una lucha a muerte, en la que sólo puede haber un superviviente. Katniss Everdeen, una joven de dieciséis años, decide sustituir a su hermana en los juegos; pero para ella, que ya ha visto la muerte de cerca, la lucha por la supervivencia es su segunda naturaleza.</p>
                         </div>
                     </div>
                 </article>
-
-                <article>
+               <!--<article>
                     <div class="dtl_pelicula">
                         <a name="seb"><h3>La La Land</h3></a>
-                        <p>Calificacion: 7.5/10 | "2h47" | 2016 | Romance-Sátira | <!--logo del corazon--> </p>
-                        <div class="info"> <!--Agregar nbr a la clase-->
+                        <p>Calificacion: 7.5/10 | "2h47" | 2016 | Romance-Sátira |  </p>
+                        <div class="info"> 
                             <img class="fotos" src="./img/ROMANCE/PELICULAS/lalaland.jpg" alt="LalaLand">
                             <iframe class="trailer" src="https://www.youtube.com/embed/0pdqf4P9MB8?si=SyHSGSk_HMHieuUa&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
                             <p class="sinopsis">Mia y Sebastian son dos jóvenes que quieren abrirse camino en el mundo de Hollywood. Mia es una joven aspirante a actriz que trabaja como camarera mientras acude a castings y Sebastian toca el piano en bares. Un día sus caminos se cruzan e inmediatamente se enamoran. Los dos trabajan juntos para hacer realidad sus sueños, pero pronto se dan cuenta de que el mundo del arte pide sacrificios que ponen en peligro su relación.</p>
@@ -59,8 +59,8 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="inter"><h3>Interestellar</h3></a>
-                        <p>Calificacion: 8.7/10 | "2h49" | 2014 | Ciencia Ficción | <!--logo del corazon--> </p>
-                        <div class="info"> <!--Agregar nbr a la clase-->
+                        <p>Calificacion: 8.7/10 | "2h49" | 2014 | Ciencia Ficción |  </p>
+                        <div class="info"> 
                             <img class="fotos" src="./img/THRILLER/PELICULA/interestellar.jpg" alt="interstellar">
                             <iframe class="trailer" src="https://www.youtube.com/embed/LYS2O1nl9iM?si=roDuOOBQdNt55-5-&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
                             <p class="sinopsis">Inspirada en la teoría del experto en relatividad Kip Stepehen Thorne sobre la existencia de los agujeros de gusano, y su función como canal para llevar a cabo los viajes en el tiempo. La historia gira en torno a un grupo de intrépidos exploradores que se adentran por uno de esos agujeros y viajan a través del mismo, encontrándose en otra dimensión. Un mundo desconocido se abre ante ellos y deberán luchar por mantenerse unidos si quieren volver de una pieza.</p>
@@ -71,8 +71,8 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="rayo"><h3>Cars</h3></a>
-                        <p>Calificacion: 7.2/10 | "1h57" | 2006 | Animación-Comedia | <!--logo del corazon--> </p>
-                        <div class="info"> <!--Agregar nbr a la clase-->
+                        <p>Calificacion: 7.2/10 | "1h57" | 2006 | Animación-Comedia |  </p>
+                        <div class="info"> 
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/cars.jpg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/SbXIj2T-_uk?si=myjfY35WHYOTkCBU" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
                             <p class="sinopsis"> Un pequeño y nuevo coche de carreras, llamado Rayo McQueen, se está preparando para ser un experto corredor y convertirse en uno de los automóviles más respetados en el panorama internacional. Un día toma la decisión de cambiar por completo su vida y se dirige a Radiator Springs, un pequeño y desértico pueblo donde hace nuevos amigos y comprenderá el verdadero sentido de su existencia. Allí entablará una buena relación con el Porsche Sally, Doc Hudson y Mater, una vieja camioneta que le hará comprender que hay cosas más importantes que los trofeos y la fama, algo que sin duda había sido el propósito del protagonista desde que se comprometió a participar en el mundo de las carreras. ¿Podrá Rayo McQueen dejar de lado todas estas cosas y centrarse en lo que de verdad merece la pena?
@@ -85,8 +85,8 @@
                     <div class="dtl_pelicula">
                         <a name="riley"></a>
                         <h3>Inside Out</h3>
-                        <p>Calificacion: 8.1/10 | "1h35" | 2015 | Animación | <!--logo del corazon--> </p>
-                        <div class="info"> <!--Agregar nbr a la clase-->
+                        <p>Calificacion: 8.1/10 | "1h35" | 2015 | Animación | </p>
+                        <div class="info"> 
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/R (4).jpeg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/yRUAzGQ3nSY?si=dCdxQL3rowV7Z-L_" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
                             <p class="sinopsis">Intensamente cuenta la historia de Riley, una niña que se muda del Medio Oeste porque su padre ha conseguido trabajo en San Francisco. Riley tiene las emociones comunes que todos conocemos, pero estas emociones viven en un centro de contro dentro de la mente de Riley desde donde la ayudan a tomar decisiones en su vida. A continuación les presentamos el resumen de la historia de Intensamente.</p>
@@ -97,8 +97,8 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="darcy"><h3>Pride and Prejudice</h3></a>
-                        <p>Calificacion: 7.1/10 | "2h47" | 2005 | Novela romantica | <!--logo del corazon--> </p>
-                        <div class="info"> <!--Agregar nbr a la clase-->
+                        <p>Calificacion: 7.1/10 | "2h47" | 2005 | Novela romantica |  </p>
+                        <div class="info"> 
                             <img class="fotos" src="./img/ROMANCE/PELICULAS/orgullo y prejuicio.jpg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/Ur_DIHs92NM?si=L7CsaFmYF6dzkMb8" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
                             <p class="sinopsis">A veces, la última persona en la tierra con la que quieres estar, es la única persona con la que no puedes estar sin ella.
@@ -111,8 +111,8 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="mike"><h3>Monsters Inc.</h3></a>
-                        <p>Calificacion: 8.1/10 | "1h32" | 2001 | Animación-Comedia | <!--logo del corazon--> </p>
-                        <div class="info"> <!--Agregar nbr a la clase-->
+                        <p>Calificacion: 8.1/10 | "1h32" | 2001 | Animación-Comedia |  </p>
+                        <div class="info"> 
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/R (6).jpeg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/CGbgaHoapFM?si=VEJj9xPs-7RDnaz0&amp;controls=0" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
                             <p class="sinopsis">Monsters Inc. es la mayor empresa de miedo del mundo, y James P. Sullivan es uno de sus mejores empleados. Asustar a los niños no es un trabajo fácil, ya que todos creen que los niños son tóxicos y no pueden tener contacto con ellos. Pero un día una niña se cuela sin querer en la empresa, provocando el caos.</p>
@@ -123,8 +123,8 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="charlie"><h3>Set it Up</h3></a>
-                        <p>Calificacion: 5.1/10 | "1h45" | 2018 | Comedia Romántica | <!--logo del corazon--> </p>
-                        <div class="info"> <!--Agregar nbr a la clase-->
+                        <p>Calificacion: 5.1/10 | "1h45" | 2018 | Comedia Romántica |  </p>
+                        <div class="info">
                             <img class="fotos" src="./img/ROMANCE/PELICULAS/set it up.jpg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/eM6l2-DeZ4c?si=GBZwFcDHejAjG_kM" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
                             <p class="sinopsis">Dos empleados de una empresa, que trabajan sin descanso por la cantidad de cosas que les mandan sus jefes urden un plan para que sus insufribles jefes los dejen en paz: hacer que se enamoren.</p>
@@ -135,8 +135,8 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="selena"><h3>Monte Carlo</h3></a>
-                        <p>Calificacion: 5.8/10 | "1h49" | 2011 | Comedia Romántica | <!--logo del corazon--> </p>
-                        <div class="info"> <!--Agregar nbr a la clase-->
+                        <p>Calificacion: 5.8/10 | "1h49" | 2011 | Comedia Romántica |  </p>
+                        <div class="info"> 
                             <img class="fotos" src="./img/FAMILIA/PELICULAS/OIP (22).jpeg">
                             <iframe class="trailer" src="https://www.youtube.com/embed/X0n3Q_VDQk8?si=YmIHkbY_3ERtYmtU" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>                            
                             <p class="sinopsis">Una joven, su hermanastra y su mejor amiga dedican sus ahorros a cumplir un sueño: visitar París. Pero el viaje resulta decepcionante, y París mucho menos glamouroso de lo que esperaban. Intentando olvidar su frustración, se cuelan en un hotel de lujo, donde una de ellas será confundida con una heredera británica. Antes de que puedan revelar su verdadera identidad, se verán envueltas en una serie de divertidos enredos que las llevarán a pasar sus vacaciones en Monte Carlo.</p>
@@ -147,14 +147,14 @@
                 <article>
                     <div class="dtl_pelicula">
                         <a name="12años"><h3>12 Years a Slave</h3></a>
-                        <p>Calificacion: 8.1/10 | "2h14" | 2013 | Drama Históric | <!--logo del corazon--> </p>
-                        <div class="info"> <!--Agregar nbr a la clase-->
+                        <p>Calificacion: 8.1/10 | "2h14" | 2013 | Drama Histórico |  </p>
+                        <div class="info"> 
                             <img class="fotos" src="./img/THRILLER/PELICULA/12 años escl.jpg" alt="12 años">
                             <iframe class="trailer" src="https://www.youtube.com/embed/z02Ie8wKKRg?si=G09StH_W7Qcwu8Bz&amp;controls=0&amp;start=1" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
                             <p class="sinopsis">Basada en un hecho real ocurrido en 1850, narra la historia de Solomon Northup, un culto músico negro que vivía con su familia en Nueva York. Tras tomar una copa con dos hombres, Solomon descubre que ha sido drogado y secuestrado para ser vendido como esclavo en una plantación de Louisiana. Solomon contempla cómo todos a su alrededor sucumben a la violencia y a la desesperación. Pero él decide no rendirse y esperar a que llegue el momento oportuno para recuperar la libertad y volver con su familia.</p>
                         </div>
                     </div>
-                </article>
+                </article>--> 
 
             </section>
 
