arreglo footer y pagina de genero

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </nav>
         </header>
 
-        <main>
+        <main class="main_home">
             <!--Hacer logo y Formulario-->
                 <section class="seccion 1"> 
     
