--- a/favorite.html
+++ b/favorite.html
@@ -27,7 +27,7 @@
                 </form>
             </nav>
         </header>
-        
+        <main class="main_detalles"></main>
         <footer>
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
