--- a/detail-genre.html
+++ b/detail-genre.html
@@ -3,6 +3,8 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <link rel="stylesheet" href="./CSS/styles.css">
         <title>Detalles de genero</title>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
