--- a/genre.html
+++ b/genre.html
@@ -53,7 +53,7 @@
                 </article>
             </section>
         </main>
-        <footer>
+        <footer class="footer_genero">
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
 
