--- a/detail-serie.html
+++ b/detail-serie.html
@@ -32,7 +32,7 @@
 
         <main class="main_detalles">
 
-            <section class="sct_detail_rom">
+            <section class="sct_detail">
 
                 <article>
                     <div class="dtl_pelicula">
