--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <div class="pelicula">
                                 <a href="./detail-movie.html#juegos_hambre"><img class="fotos" src="./img/THRILLER/PELICULA/hunger games.jpg" alt="Hunger games"></a>
                                 <div class="titfav">
-                                    <h4 class="perro">The Hunger Games</h4>
+                                    <h4>The Hunger Games</h4>
                                     <i class="fa-regular fa-heart" style="color: #ffffff;"></i>
                                 </div>
                                 <p>Fecha de estreno: 2012</p>
