--- a/detail-movie.html
+++ b/detail-movie.html
@@ -32,16 +32,16 @@
 
         <main class="main_detalles">
 
-            <section class="sct_detail_rom">
+            <section class="sct_detail">
 
                 <article>
                     <div class="dtl_pelicula">
                         <a name="juegos_hambre"><h3>The Hunger Games</h3></a>
-                        <p>Calificacion: 7.2/10 | "2h22" | 2012 | Thriller-Aventura-Acción |  </p>
+                        <p>Calificacion: 7.2/10 | "2h22" | 2012 | Thriller|  </p>
                         <div class="info"> 
-                            <img class="fotos" src="./img/THRILLER/PELICULA/hunger games.jpg" alt="Hunger games">
+                            <img class="fotos_dtl" src="./img/THRILLER/PELICULA/hunger games.jpg" alt="Hunger games">
                             <iframe class="trailer" src="https://www.youtube.com/embed/PbA63a7H0bo?si=2ceZZEPzD4iljlGH&amp;controls=0&amp;start=5" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
-                            <p class="sinopsis">Lo que en el pasado fueron los Estados Unidos, ahora es una nación llamada Panem; un imponente Capitolio ejerce un control riguroso sobre los 12 distritos que lo rodean y que están aislados entre sí. Cada distrito se ve obligado a enviar anualmente un chico y una chica entre los doce y los dieciocho años para que participen en los Hunger Games, unos juegos que son transmitidos en directo por la televisión. Se trata de una lucha a muerte, en la que sólo puede haber un superviviente. Katniss Everdeen, una joven de dieciséis años, decide sustituir a su hermana en los juegos; pero para ella, que ya ha visto la muerte de cerca, la lucha por la supervivencia es su segunda naturaleza.</p>
+                            <p class="sinopsis">""The Hunger Games" es una distopía en la que Katniss Everdeen, una joven de un distrito empobrecido, se ofrece como voluntaria para participar en los Juegos del Hambre, un evento anual mortal organizado por el Capitolio para mantener el control sobre los distritos. Junto a su compañero Peeta, Katniss debe luchar por su supervivencia en una competencia donde solo uno puede salir con vida, mientras desafía la opresión del Capitolio y se convierte en un símbolo de resistencia."</p>
                         </div>
                     </div>
                 </article>
