cambios dtl movie,  dtl serie y genre

--- a/detail-serie.html
+++ b/detail-serie.html
@@ -15,7 +15,7 @@
 
     <body>
         <header>
-            <nav class="menu">
+            <nav class="menu menu_detalles">
                 <a href="./index.html" CLASS="cinepedia"><h1>CINEPEDIA</h1></a>
                 <a class="navegador" href="./favorite.html">Favoritos</a>
                 <a class="navegador" href="./genre.html">Generos</a>
@@ -100,7 +100,7 @@
 
         </main>
 
-        <footer>
+        <footer class="footer_detalles">
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
 
