--- a/genre.html
+++ b/genre.html
@@ -32,8 +32,8 @@
             <section class="botones">
                 <article class="botones_pelis">
                     <h2>Películas por genero</h2>
-                    <div class="div_boton">
-                        <form action="./detail-genre.html" method="GET">
+                    <div class="divboton">
+                        <form action="./detail-genre.html" method="GET" class="divboton">
                             <button type="submit" name="Peli_Romance">Romance</button>
                             <button type="submit" name="Peli_Familia">En Familia</button>
                             <button type="submit" name="Peli_Drama">Drama</button>
@@ -43,8 +43,8 @@
 
                 <article class="botones_series">
                     <h2>Series por genero</h2>
-                    <div class="div_boton">
-                        <form action="./detail-genre.html" method="GET">
+                    <div>
+                        <form action="./detail-genre.html" method="GET" class="divboton">
                             <button type="submit" name="Serie_Romance">Romance</button>
                             <button type="submit" name="Serie_Familia">En Familia</button>
                             <button type="submit" name="Serie_Drama">Drama</button>
@@ -53,7 +53,7 @@
                 </article>
             </section>
         </main>
-        <footer class="footer_genero">
+        <footer>
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
 
