--- a/detail-genre.html
+++ b/detail-genre.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header>
-            <nav class="menu">
+            <nav class="menu menu_detalles">
                 <a href="./index.html" CLASS="cinepedia"><h1>CINEPEDIA</h1></a>
                 <a class="navegador" href="./favorite.html">Favoritos</a>
                 <a class="navegador" href="./genre.html">Generos</a>
