--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <a href="./detail-movie.html#seb"><img class="fotos" src="./img/ROMANCE/PELICULAS/lalaland.jpg" alt="LalaLand"></a>
                                 <div class="titfav">
                                     <h4>La La Land</h4>
-                                    <i class="fa-regular fa-heart" style="color: #ffffff;"></i>
+                                    <i class="fa-solid fa-heart" style="color: #ff0000;"></i>
                                 </div>
                                 <p>Fecha de estreno: 2016</p>
                             </div>
@@ -59,7 +59,7 @@
                                 <a href="./detail-movie.html#inter"><img class="fotos" src="./img/THRILLER/PELICULA/interestellar.jpg" alt="interstellar"></a>
                                 <div class="titfav">
                                     <h4>Interestellar</h4>
-                                    <i class="fa-regular fa-heart" style="color: #ffffff;"></i>
+                                    <i class="fa-solid fa-heart" style="color: #ff0000;"></i>
                                 </div>                                 
                                  <p>Fecha de estreno: 2014</p>
                             </div>
@@ -92,7 +92,7 @@
                                 <a href="./detail-serie.html#blair"><img class="fotos" src="./img/ROMANCE/SERIES/91I8ElmqRZL._AC_SL1500_.jpg" alt="Gossip girl"></a>
                                 <div class="titfav">
                                     <h4>Gossip Girl</h4>
-                                    <i class="fa-regular fa-heart" style="color: #ffffff;"></i>
+                                    <i class="fa-solid fa-heart" style="color: #ff0000;"></i>
                                 </div>
                                 <p>Fecha de estreno: 2008</p>
                             </div>
@@ -101,7 +101,7 @@
                                 <a href="./detail-serie.html#phil"><img class="fotos" src="./img/FAMILIA/SERIES/R (5).jpeg" alt="Morder Family"></a>
                                 <div class="titfav">
                                     <h4>Modern Family</h4>
-                                    <i class="fa-regular fa-heart" style="color: #ffffff;"></i>
+                                    <i class="fa-solid fa-heart" style="color: #ff0000;"></i>
                                 </div>
                                 <p>Fecha de estreno: 2009</p>
                             </div>
@@ -152,7 +152,7 @@
                                 <a href="./detail-movie.html#mike"><img class="fotos" src="./img/FAMILIA/PELICULAS/R (6).jpeg" alt="Monster Inc"></a>
                                 <div class="titfav">
                                     <h4>Monsters Inc.</h4>
-                                    <i class="fa-regular fa-heart" style="color: #ffffff;"></i>
+                                    <i class="fa-solid fa-heart" style="color: #ff0000;"></i>
                                 </div>
                                 <p>Fecha de estreno: 2001</p>
                             </div>
