--- a/search-result.html
+++ b/search-result.html
@@ -29,6 +29,23 @@
             </nav>
         </header>
 
+        <main class="main_detalles">
+
+            <section class="sct_detail">
+                <article>
+                    <div class="dtl_pelicula">
+                        <a name="juegos_hambre"><h3>The Hunger Games</h3></a>
+                        <p>Calificacion: 7.2/10 | "2h22" | 2012 | Thriller|  </p>
+                        <div class="info"> 
+                            <img class="fotos" src="./img/THRILLER/PELICULA/hunger games.jpg" alt="Hunger games">
+                            <iframe class="trailer" src="https://www.youtube.com/embed/PbA63a7H0bo?si=2ceZZEPzD4iljlGH&amp;controls=0&amp;start=5" title="YouTube video player" frameborder="0" allow="autoplay"></iframe>
+                            <p class="sinopsis">""The Hunger Games" es una distopía en la que Katniss Everdeen, una joven de un distrito empobrecido, se ofrece como voluntaria para participar en los Juegos del Hambre, un evento anual mortal organizado por el Capitolio para mantener el control sobre los distritos. Junto a su compañero Peeta, Katniss debe luchar por su supervivencia en una competencia donde solo uno puede salir con vida, mientras desafía la opresión del Capitolio y se convierte en un símbolo de resistencia."</p>
+                        </div>
+                    </div>
+                </article>
+            </section>
+        </main>
+
         <footer>
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
