--- a/favorite.html
+++ b/favorite.html
@@ -30,6 +30,7 @@
         <main class="main_home">
                 <section class="seccion1"> 
                         <article class="categoria"> 
+                            <h2> Favoritos </h2>
                             <div class ="portada">
                                 <div class="pelicula">
                                     <a href="./detail-movie.html#seb"><img class="fotos" src="./img/ROMANCE/PELICULAS/lalaland.jpg" alt="LalaLand"></a>
