--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
         </main>
 
         <footer>
+            <img id="logoSvg" src="./img/LOGO/tmdb.png">
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
 
