carpetas y archivos js, buscador

--- a/genre.html
+++ b/genre.html
@@ -22,7 +22,10 @@
                 <a class="navegador" href="./detail-serie.html">Detalles serie</a>
                 <form action="search-result.html" method="GET">
                     <div class="buscador">
-                        <i class="fa-solid fa-magnifying-glass lupa"></i><input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
+                        <button class="fa-solid fa-magnifying-glass lupa">
+                            <i></i>
+                        </button>
+                        <input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
                     </div>
                 </form>
             </nav>
@@ -33,9 +36,9 @@
                     <h2>Películas por genero</h2>
                     <div class="divboton">
                         <form action="./detail-genre.html" method="GET" class="divboton">
-                            <button type="submit" name="Peli_Romance">Romance</button>
-                            <button type="submit" name="Peli_Familia">En Familia</button>
-                            <button type="submit" name="Peli_Drama">Drama</button>
+                            <button class="button" type="submit" name="Peli_Romance">Romance</button>
+                            <button class="button" type="submit" name="Peli_Familia">En Familia</button>
+                            <button class="button" type="submit" name="Peli_Drama">Drama</button>
                         </form>
                     </div>
                 </article>
@@ -44,9 +47,9 @@
                     <h2>Series por genero</h2>
                     <div>
                         <form action="./detail-genre.html" method="GET" class="divboton">
-                            <button type="submit" name="Serie_Romance">Romance</button>
-                            <button type="submit" name="Serie_Familia">En Familia</button>
-                            <button type="submit" name="Serie_Drama">Drama</button>
+                            <button class="button" type="submit" name="Serie_Romance">Romance</button>
+                            <button class="button" type="submit" name="Serie_Familia">En Familia</button>
+                            <button class="button" type="submit" name="Serie_Drama">Drama</button>
                         </form>
                     </div>
                 </article>
