--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
                 <a class="navegador" href="./detail-movie.html">Detalles pelicula</a>
                 <a class="navegador" href="./detail-serie.html">Detalles serie</a>
                 <form action="search-result.html" method="GET">
-                    <div class="buscador">
-                        <i class="fa-solid fa-magnifying-glass lupa"></i><input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
-                    </div>
+                        <div class="buscador">
+                            <button class="fa-solid fa-magnifying-glass lupa">
+                                <i></i>
+                            </button>
+                            <input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
+                        </div>
                 </form>
             </nav>
         </header>
