--- a/detail-movie.html
+++ b/detail-movie.html
@@ -23,7 +23,10 @@
                 <a class="navegador" href="./detail-serie.html">Detalles serie</a>
                 <form action="search-result.html" method="GET">
                     <div class="buscador">
-                        <i class="fa-solid fa-magnifying-glass lupa"></i><input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
+                        <button class="fa-solid fa-magnifying-glass lupa">
+                            <i></i>
+                        </button>
+                        <input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
                     </div>
                 </form>
             </nav>
