--- a/search-result.html
+++ b/search-result.html
@@ -22,7 +22,10 @@
                 <a class="navegador" href="./detail-serie.html">Detalles serie</a>
                 <form action="search-result.html" method="GET">
                     <div class="buscador">
-                        <i class="fa-solid fa-magnifying-glass lupa"></i><input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
+                        <button class="fa-solid fa-magnifying-glass lupa">
+                            <i></i>
+                        </button>
+                        <input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
                     </div>
                 </form>
             </nav>
@@ -80,7 +83,7 @@
         <footer>
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
-
+        <script src="./js/search-result.js"></script>
     </body>
 
 </html>
