--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <img id="logoSvg" src="./img/LOGO/tmdb.png">
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
-
+        <script type="text/javascript" src="./js/index.js"></script>
     </body>
 
 </html>
