--- a/genre.html
+++ b/genre.html
@@ -18,18 +18,17 @@
                 <a href="./index.html" CLASS="cinepedia"><h1>CINEPEDIA</h1></a>
                 <a class="navegador" href="./favorite.html">Favoritos</a>
                 <a class="navegador" href="./genre.html">Generos</a>
-                <a class="navegador" href="./detail-movie.html">Detalles pelicula</a>
-                <a class="navegador" href="./detail-serie.html">Detalles serie</a>
                 <form action="search-result.html" method="GET">
-                    <div class="buscador">
-                        <button class="fa-solid fa-magnifying-glass lupa">
-                            <i></i>
-                        </button>
-                        <input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
-                    </div>
+                        <div class="buscador">
+                            <button class="fa-solid fa-magnifying-glass lupa">
+                                <i></i>
+                            </button>
+                            <input class="buscar" type="text" name="busqueda" value="" placeholder="Buscar">
+                        </div>
                 </form>
             </nav>
         </header>
+        
         <main class="genres_botones">
             <section class="botones">
                 <article class="botones_pelis">
@@ -56,6 +55,7 @@
             </section>
         </main>
         <footer>
+            <img id="logoSvg" src="./img/LOGO/tmdb.png">
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
 
