api peliculas home prueba

--- a/index.html
+++ b/index.html
@@ -186,6 +186,13 @@
     
                         </div>
                     </article>
+
+                    <article class="categoria">
+                        <h3>PRUEBA API</h3>
+                        <div id="divPrueba" class ="portada"> 
+                        </div>
+                    </article>
+
                 </section>
         </main>
 
