--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <main class="main_home">
                 <section class="seccion1"> 
-    
+<!--  
                     <article class="categoria"> 
                         <h3>Películas populares</h3>
                         <div class ="portada">
@@ -186,10 +186,23 @@
     
                         </div>
                     </article>
+-->  
 
                     <article class="categoria">
-                        <h3>PRUEBA API</h3>
-                        <div id="divPrueba" class ="portada"> 
+                        <h3>Peliculas con mejor calificación</h3>
+                        <div id="divMejorClasificacion" class ="portada"> 
+                        </div>
+                    </article>
+
+                    <article class="categoria">
+                        <h3>Peliculas populares</h3>
+                        <div id="divPopulares" class ="portada"> 
+                        </div>
+                    </article>
+
+                    <article class="categoria">
+                        <h3>Series populares</h3>
+                        <div id="divSeriesPopulares" class ="portada"> 
                         </div>
                     </article>
 
