resultado de busqueda

--- a/search-result.html
+++ b/search-result.html
@@ -30,7 +30,7 @@
         </header>
 
         <main class="main_home">
-            <section class="seccion1"> 
+            <!-- <section class="seccion1"> 
                     <article class="categoria"> 
                     <h3 id="texto-busqueda">Resultado de búsqueda de:  </h3>
                         <div class ="portada">
@@ -51,7 +51,7 @@
                             </div>
 
                             <div class="pelicula">
-                                <a href="./detail-serie.html#blair"><img class="fotos" src="./img/ROMANCE/SERIES/91I8ElmqRZL._AC_SL1500_.jpg" alt="Gossip girl"></a>
+                                <a href="./detail-serie.html#blair"><img class="fotos" src="./img/ROMANCE/SERIES/91I8ElmqRZL.AC_SL1500.jpg" alt="Gossip girl"></a>
                                 <div class="titfav">
                                     <h4>Gossip Girl</h4>
                                 </div>
@@ -75,7 +75,17 @@
                             </div>
                         </div>
                 </article>
+            </section> -->
+            <section class="seccion1">
+                <article class="categoria"> 
+                    <h3 id="texto-busqueda">Resultado de búsqueda de:  </h3>
+                    <div id="resultados-busqueda" class="portada">
+
+                    </div>
+                </article>
             </section>
+
+
         </main>
 
         <footer>
@@ -83,6 +93,7 @@
             <p>© 2023 by Chiara Muzzio, Felipe Ruiz Guiñazú, Meline Birnisan</p>
         </footer>
         <script src="./js/search-result.js"></script>
+        
     </body>
 
 </html>
