--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
         </footer>
         <script type="text/javascript" src="./js/favorite.js"></script>
         <script type="text/javascript" src="./js/index.js"></script>
+        <script type="text/javascript" src="./js/search-result.js"></script>
     </body>
 
 </html>
